--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
+lazy_static = '*'
 wasm-bindgen = '*'
 sudachi = { path = '../sudachi.rs' }
