--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wasm"
+name = "sudachi-wasm-sample"
 version = "0.1.0"
 authors = ["vraisamis-UX305FA <quick.sorting.arg@gmail.com>"]
 edition = "2018"
@@ -9,6 +9,6 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-lazy_static = '*'
-wasm-bindgen = '*'
+lazy_static = '1.4.0'
+wasm-bindgen = '0.2.56'
 sudachi = { path = '../sudachi.rs' }
