--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "sudachi-wasm-sample"
 version = "0.1.0"
-authors = ["vraisamis-UX305FA <quick.sorting.arg@gmail.com>"]
+authors = ["vraisamis <quick.sorting.arg@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,4 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 lazy_static = '1.4.0'
 wasm-bindgen = '0.2.56'
-sudachi = { path = '../sudachi.rs' }
+
+[dependencies.sudachi]
+git = 'https://github.com/sorami/sudachi.rs'
+rev = '3600c8e4d0d570b97593bd2ff23d3bb66ba42d47'
